# tx-optimizer

./: .gitattributes  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/feerates/: 2019-2020-per-day.csv  2020-04--2022-04-feerates.csv  blocks_1_to_799155.csv  peak-and-tail.csv  rand-1-15.csv
data/scenarios/: HTNT-low-rand-feerates.csv  bustabit-2019-2020-short.csv  bustabit-2019-2020-tiny-hot-wallet.csv  bustabit-2019-2020-tiny.csv  bustabit-2019-2020.csv  inverted-bustabit-2019-2020-tiny-hot-wallet.csv  random_blocks.csv
data/simulations/01_09_2023__19_03_38/: simulation_summary.json
data/simulations/01_09_2023__19_03_38/bustabit-2019-2020-short/avoid-change/: transactions_summary.csv  utxo_activity.csv
data/simulations/01_09_2023__19_03_38/bustabit-2019-2020-short/greatest-first/: transactions_summary.csv  utxo_activity.csv
data/simulations/01_09_2023__19_03_38/bustabit-2019-2020-short/maximize-effective-value-with-fallback/: transactions_summary.csv  utxo_activity.csv
data/simulations/11_09_2023__12_23_07/: simulation_summary.json
data/simulations/13_08_2023__16_22_22/: simulation_summary.json
data/transactions/: HappyTriosNeverTell-payment-sequence.csv  bustabit-tiny-hot-wallet.csv  bustabit.csv  dias.csv  dias_400_10_mBTC.csv  inverted-bustabit-tiny-hot-wallet.csv
src/: btc_selection  log_config.py  simulation.py  utils.py
src/datatypes/: fee_rate.py  transaction.py  utxo.py  wallet.py
src/scenarios/: create_txs.py  extract_fees.py  scenario.py
src/selection/: context.py  metrics.py  models.py
src/utils/: authproxy.py  bitcoin.py  hardware.py  retries.py  time.py
(+123 files in other folders)
